--- a/public/index.html
+++ b/public/index.html
@@ -116,48 +116,52 @@
       .gallery{grid-template-columns:repeat(2,1fr)}
       aside{margin-top:18px}
     }
-    @media (max-width:640px){
-      .wrap{padding:4px}
-      .topbar{flex-direction:column;align-items:flex-start;gap:10px}
-      .brand h1{font-size:15px}
+    @media (max-width:768px){
+      .wrap{padding:6px;margin:20px auto}
+      .topbar{flex-direction:column;align-items:flex-start;gap:12px}
+      .brand h1{font-size:18px}
       .brand p{display:none}
-      .logo-box{width:44px;height:44px}
+      .logo-box{width:48px;height:48px}
       .actions{width:100%;justify-content:flex-start}
-      .search input{min-width:80px;font-size:14px}
-      .main-card{padding:10px}
+      .search{width:100%;padding:10px 14px}
+      .search input{min-width:100px;width:100%;font-size:16px}
+      .main-card{padding:12px}
+      .stats{flex-direction:column;gap:10px}
+      .stat{padding:10px;width:100%}
+      .stat .s-ico{width:36px;height:36px}
+      .gallery{grid-template-columns:repeat(2,1fr);gap:8px}
+      .thumb{height:140px}
+      .meta{padding:8px}
+      .panel{padding:10px}
+      .nav-list{gap:6px}
+      .nav-item{padding:8px;font-size:15px}
+      .intro{margin:12px 0}
+      .intro .about{padding:10px}
+      .services{gap:8px}
+      .service-btn{padding:8px 12px;font-size:13px}
+      footer{font-size:12px;padding:8px}
+      .float-contact{right:12px;bottom:12px}
+      .whatsapp-btn{padding:10px 12px;font-size:15px}
+    }
+    @media (max-width:480px){
+      .wrap{padding:4px;margin:10px auto}
+      .topbar{gap:8px}
+      .brand h1{font-size:16px}
+      .logo-box{width:40px;height:40px}
+      .main-card{padding:8px}
       .stats{flex-direction:column;gap:8px}
       .stat{padding:8px}
       .stat .s-ico{width:32px;height:32px}
-      .gallery{grid-template-columns:1fr}
+      .gallery{grid-template-columns:1fr;gap:6px}
       .thumb{height:120px}
-      .meta{padding:7px}
+      .meta{padding:6px}
       .panel{padding:8px}
-      .nav-list{gap:4px}
-      .nav-item{padding:6px;font-size:14px}
-      .intro{margin:10px 0}
+      .nav-item{font-size:14px}
       .intro .about{padding:8px}
-      .services{gap:6px}
-      .service-btn{padding:7px 10px;font-size:12px}
-      footer{font-size:12px;padding:6px}
-      .float-contact{right:10px;bottom:10px}
+      .service-btn{padding:6px 10px;font-size:12px}
+      footer{font-size:11px;padding:6px}
+      .float-contact{right:8px;bottom:8px}
       .whatsapp-btn{padding:8px 10px;font-size:14px}
-    }
-    @media (max-width:480px){
-      .wrap{padding:2px}
-      .topbar{gap:6px}
-      .brand h1{font-size:13px}
-      .logo-box{width:36px;height:36px}
-      .main-card{padding:6px}
-      .gallery{gap:6px}
-      .thumb{height:80px}
-      .meta{padding:5px}
-      .panel{padding:5px}
-      .nav-item{font-size:12px}
-      .intro .about{padding:5px}
-      .service-btn{padding:5px 8px;font-size:11px}
-      footer{font-size:11px;padding:3px}
-      .float-contact{right:4px;bottom:4px}
-      .whatsapp-btn{padding:6px 8px;font-size:12px}
     }
   </style>
 </head>
